--- a/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
+++ b/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
@@ -7,7 +7,13 @@
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.3" />
+    <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.4.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.GraphQL.Attributes\TodoApp.GraphQL.Attributes.csproj" />
+    <ProjectReference Include="..\TodoApp.GraphQL.Types\TodoApp.GraphQL.Types.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
