--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -4,43 +4,18 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
-    {
-        "name": ".NET Core Launch (web)",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        "program": "${workspaceFolder}/TodoApp.Server/bin/Debug/netcoreapp3.1/TodoApp.Server.dll",
-        "args": [],
-        "cwd": "${workspaceFolder}/TodoApp.Server",
-        "stopAtEntry": false,
-        "serverReadyAction": {
-            "action": "openExternally",
-            "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
-        },
-        "env": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        },
-        "sourceFileMap": {
-            "/Views": "${workspaceFolder}/Views"
-        }
-    },
-    {
-        "name": ".NET Core Attach",
-        "type": "coreclr",
-        "request": "attach",
-        "processId": "${command:pickProcess}"
-    },
-    {
-        "name": "Docker .NET Core Launch",
-        "type": "docker",
-        "request": "launch",
-        "preLaunchTask": "docker-run: debug",
-        "netCore": {
-            "appProject": "${workspaceFolder}/TodoApp.Server/TodoApp.Server.csproj"
-        },
-        "dockerServerReadyAction": {
-            "uriFormat": "%s://localhost:%s"
-        }
-    }
-]
+		{
+			"name": "Docker .NET Core Attach",
+			"type": "docker",
+			"request": "attach",
+			"platform": "netCore",
+			"sourceFileMap": {
+				"/src": "${workspaceFolder}"
+			},
+			"netCore": {
+				"debuggerPath": "/remote_debugger/vsdbg",
+			},
+			"processName": "TodoApp.Server"
+		}
+	]
 }
