--- a/backend/.vscode/tasks.json
+++ b/backend/.vscode/tasks.json
@@ -1,19 +1,16 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "--project",
-                "${workspaceFolder}/TodoApp.Server/TodoApp.Server.csproj",
-                "run",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        }
-    ]
+	// See https://go.microsoft.com/fwlink/?LinkId=733558
+	// for the documentation about the tasks.json format
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Run TodoApp in debug configuration",
+			"type": "shell",
+			"runOptions": {
+				"runOn": "folderOpen"
+			},
+			"command": "docker-compose -f docker-compose.debug.yml up --remove-orphans",
+			"problemMatcher": []
+		}
+	]
 }
