--- a/backend/TodoApp.Server/TodoApp.Server.csproj
+++ b/backend/TodoApp.Server/TodoApp.Server.csproj
@@ -2,6 +2,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.GraphQL\TodoApp.GraphQL.csproj" />
+    <ProjectReference Include="..\TodoApp.Debugging\TodoApp.Debugging.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
