--- a/backend/TodoApp.Server/TodoApp.Server.csproj
+++ b/backend/TodoApp.Server/TodoApp.Server.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.GraphQL\TodoApp.GraphQL.csproj" />
     <ProjectReference Include="..\TodoApp.Debugging\TodoApp.Debugging.csproj" />
+    <ProjectReference Include="..\TodoApp.Cqrs\TodoApp.Cqrs.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
