--- a/backend/TodoApp.GraphQL.Hello/TodoApp.GraphQL.Hello.csproj
+++ b/backend/TodoApp.GraphQL.Hello/TodoApp.GraphQL.Hello.csproj
@@ -5,11 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Cqrs.Hello\TodoApp.Cqrs.Hello.csproj" />
     <ProjectReference Include="..\TodoApp.Cqrs.Types\TodoApp.Cqrs.Types.csproj" />
+    <ProjectReference Include="..\TodoApp.GraphQL.Types\TodoApp.GraphQL.Types.csproj" />
   </ItemGroup>
 
 </Project>
