--- a/backend/TodoApp.Cqrs/TodoApp.Cqrs.csproj
+++ b/backend/TodoApp.Cqrs/TodoApp.Cqrs.csproj
@@ -7,12 +7,12 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Cqrs.Types\TodoApp.Cqrs.Types.csproj" />
-    <ProjectReference Include="..\TodoApp.Cqrs.Hello\TodoApp.Cqrs.Hello.csproj" />
+    <ProjectReference Include="..\TodoApp.Domain.Handlers\TodoApp.Domain.Handlers.csproj" />
   </ItemGroup>
 
 </Project>
