Add automatic ef migrations merging, register necessary services

--- a/backend/TodoApp.Server/TodoApp.Server.csproj
+++ b/backend/TodoApp.Server/TodoApp.Server.csproj
@@ -4,12 +4,34 @@
     <ProjectReference Include="..\TodoApp.GraphQL\TodoApp.GraphQL.csproj" />
     <ProjectReference Include="..\TodoApp.Debugging\TodoApp.Debugging.csproj" />
     <ProjectReference Include="..\TodoApp.Cqrs\TodoApp.Cqrs.csproj" />
+    <ProjectReference Include="..\TodoApp.Domain.Contexts\TodoApp.Domain.Contexts.csproj" />
+    <ProjectReference Include="..\TodoApp.Domain.Repositories\TodoApp.Domain.Repositories.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>7b74b68c26bd04113c85c2fbe6588008</UserSecretsId>
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(MSBuildProjectDirectory)/obj/**/*</DefaultItemExcludes>
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(MSBuildProjectDirectory)/bin/**/*</DefaultItemExcludes>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(DOTNET_RUNNING_IN_CONTAINER)' == 'true'">
+    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/obj/container/</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildProjectDirectory)/bin/container/</BaseOutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(DOTNET_RUNNING_IN_CONTAINER)' != 'true'">
+    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/obj/local/</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildProjectDirectory)/bin/local/</BaseOutputPath>
+  </PropertyGroup>
+
 </Project>
