Add basic api implementation

--- a/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
+++ b/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
@@ -13,8 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.GraphQL.Types\TodoApp.GraphQL.Types.csproj" />
-    <ProjectReference Include="..\TodoApp.Api.Boards\TodoApp.Api.Boards.csproj" />
-    <ProjectReference Include="..\TodoApp.Api.Todos\TodoApp.Api.Todos.csproj" />
+    <ProjectReference Include="..\TodoApp.Api\TodoApp.Api.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
