Fix missing documentation files

--- a/backend/Directory.Build.props
+++ b/backend/Directory.Build.props
@@ -15,4 +15,9 @@
     <BaseOutputPath>$(MSBuildProjectDirectory)/bin</BaseOutputPath>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
