--- a/frontend/todo-app/package.json
+++ b/frontend/todo-app/package.json
@@ -34,13 +34,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.7",
+    "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
+    "@angular-eslint/eslint-plugin-template": "0.0.1-alpha.32",
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "codelyzer": "^5.1.2",
+    "eslint": "^7.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsdoc": "^27.1.2",
+    "eslint-plugin-prefer-arrow": "^1.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
