--- a/frontend/todo-app/.eslintrc.json
+++ b/frontend/todo-app/.eslintrc.json
@@ -164,7 +164,7 @@ Happy linting! 💖
         "@typescript-eslint/prefer-regexp-exec": "error",
         "@typescript-eslint/quotes": [
             "error",
-            "double"
+            "single"
         ],
         "@typescript-eslint/require-await": "error",
         "@typescript-eslint/restrict-plus-operands": "error",
