--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "files.exclude": {
+        "**/.vscode": true,
+        "**/node_modules": true
+    }
 }
