--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"editor.formatOnType": true
+	"editor.formatOnType": true,
+	"editor.formatOnPaste": true,
+	"editor.formatOnSave": true,
+	"files.exclude": {
+		"**/bin": true,
+		"**/obj": true,
+		"**/.vscode": true
+	}
 }
