--- a/src/docker-compose.prod.yml
+++ b/src/docker-compose.prod.yml
@@ -1,38 +1,2 @@
-version: "3.4"
-
-services:
-  todoapp-server:
-    build:
-      context: ../backend
-      dockerfile: ../backend/TodoApp.Server/Dockerfile
-    ports:
-      - 5000:80
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-    volumes:
-      - ../backend:/src
-
-  pg-db:
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: SimplePassword1
-    logging:
-      driver: none
-
-  pg-admin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@backend.com
-      PGADMIN_DEFAULT_PASSWORD: SimplePassword1
-    ports:
-      - "5050:80"
-    networks:
-      - backend
-    depends_on:
-      - pg-db
-    logging:
-      driver: none
-    restart: always
-
-networks:
-  backend:
+version: "3.8"
+# TODO
