--- a/src/backend/.vscode/launch.json
+++ b/src/backend/.vscode/launch.json
@@ -1,11 +1,11 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-   "version": "0.2.0",
-   "configurations": [
+	// Use IntelliSense to find out which attributes exist for C# debugging
+	// Use hover for the description of the existing attributes
+	// For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+	"version": "0.2.0",
+	"configurations": [
 		{
-			"name": "Attach to TodoApp.Server",
+			"name": "Attach to Dev.TodoApp.Server",
 			"type": "docker",
 			"request": "attach",
 			"platform": "netCore",
@@ -13,10 +13,10 @@
 				"/src": "${workspaceFolder}"
 			},
 			"netCore": {
-				"debuggerPath": "/remote_debugger/vsdbg",
+				"debuggerPath": "/remote_debugger/vsdbg"
 			},
 			"processName": "TodoApp.Server",
-			"containerName": "TodoApp.Server"
+			"containerName": "Dev.TodoApp.Server"
 		}
 	]
 }
