--- a/src/backend/TodoApp.Server/Dockerfile.dev
+++ b/src/backend/TodoApp.Server/Dockerfile.dev
@@ -1,4 +1,8 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1
-EXPOSE 5000
+
+RUN apt update && \
+	apt install unzip && \
+	curl -sSL https://aka.ms/getvsdbgsh | /bin/sh /dev/stdin -v latest -l /remote_debugger
+
 WORKDIR /src
 ENTRYPOINT ["dotnet", "watch", "--project", "TodoApp.Server", "run", "--urls", "http://0.0.0.0:80", "--debug"]
