--- a/src/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
+++ b/src/backend/TodoApp.GraphQL/TodoApp.GraphQL.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="3.4.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.3" />
-    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.3" />
-    <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.4.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0.0" />
   </ItemGroup>
 
