Fix /info and /pgadmin routes configuration

--- a/src/nginx/config/nginx.conf
+++ b/src/nginx/config/nginx.conf
@@ -4,27 +4,51 @@ http {
         listen 0.0.0.0:80;
 
         location / {
-            proxy_pass http://todoapp-client:80;
+            proxy_pass http://todoapp-client:80/;
+
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $remote_addr;
+			proxy_set_header Host $host;
         }
 
 		location /info {
-			proxy_pass http://todoapp-server:80;
+			proxy_pass http://todoapp-server:80/;
+
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $remote_addr;
+			proxy_set_header Host $host;
 		}
 
 		location /graphql {
 			proxy_pass http://todoapp-server:80/graphql;
+
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $remote_addr;
+			proxy_set_header Host $host;
 		}
 
 		location /graphql/playground {
 			proxy_pass http://todoapp-server:80/graphql/playground;
+
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $remote_addr;
+			proxy_set_header Host $host;
 		}
 
 		location /graphql/voyager {
 			proxy_pass http://todoapp-server:80/graphql/voyager;
+
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $remote_addr;
+			proxy_set_header Host $host;
 		}
 
 		location /pgadmin {
 			proxy_pass http://todoapp-pgadmin:80;
+
+			proxy_set_header X-Script-Name /pgadmin;
+			proxy_set_header Host $host;
+			proxy_redirect off;
 		}
     }
 }
