Remove .vscode from excluded folders

--- a/src/backend/.vscode/settings.json
+++ b/src/backend/.vscode/settings.json
@@ -4,7 +4,6 @@
 	"editor.formatOnSave": true,
 	"files.exclude": {
 		"**/bin": true,
-		"**/obj": true,
-		"**/.vscode": true
+		"**/obj": true
 	}
 }
